--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "guess-function-max-arity": "^1.0.0",
+    "ms": "^2.1.2",
     "rollup": "^2.26.11"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@mixmaxhq/prettier-config": "^1.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "eslint": "^7.8.1",
     "eslint-config-mixmax": "^4.11.1",
     "jest": "^26.4.2",
